--- a/package.json
+++ b/package.json
@@ -93,16 +93,18 @@
     "vue-template-compiler": ">=2.0.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
+    "@babel/cli": "7.0.0-beta.54",
+    "@babel/core": "7.0.0-beta.54",
+    "@babel/plugin-proposal-class-properties": "7.0.0-beta.54",
+    "@babel/plugin-proposal-object-rest-spread": "7.0.0-beta.54",
+    "@babel/plugin-syntax-dynamic-import": "7.0.0-beta.54",
+    "@babel/preset-env": "7.0.0-beta.54",
+    "@babel/preset-react": "7.0.0-beta.54",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^8.2.2",
     "babel-jest": "^22.4.3",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-syntax-dynamic-import": "~6.18.0",
+    "babel-loader": "^8.0.0-beta.0",
     "babel-plugin-system-import-transformer": "^3.1.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
     "cheerio": "^1.0.0-rc.2",
     "deabsdeep": "^1.0.6",
     "deepfreeze": "^2.0.0",
