--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
 	"presets": [
 		[
-			"env",
+			"@babel/env",
 			{
 				"targets": {
 					"uglify": true
@@ -9,7 +9,7 @@
 				"modules": false
 			}
 		],
-		"react"
+		"@babel/react"
 	],
 	"plugins": [
 		"transform-class-properties",
@@ -18,7 +18,7 @@
 	],
 	"env": {
 		"test": {
-			"presets": ["env", "react"],
+			"presets": ["@babel/env", "@babel/react"],
 			"plugins": [
 				"system-import-transformer",
 				"transform-class-properties",
