--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-styleguidist-babel-7",
+  "name": "@nauticus-blockchain/vue-styleguidist-babel-7",
   "description": "Vue components style guide generator with Babel 7",
   "version": "1.7.13",
   "homepage": "https://github.com/vue-styleguidist/vue-styleguidist",
@@ -26,6 +26,7 @@
     "npm": ">=3"
   },
   "dependencies": {
+    "@nauticus-blockchain/vue-docgen-api-babel-7": "^2.3.11",
     "@vxna/mini-html-webpack-template": "^0.1.4",
     "acorn": "^5.5.3",
     "ast-types": "^0.11.3",
@@ -83,7 +84,6 @@
     "type-detect": "^4.0.8",
     "uglifyjs-webpack-plugin": "1.2.4",
     "unist-util-visit": "^1.3.0",
-    "vue-docgen-api": "^2.3.11",
     "webpack-dev-server": "^2.9.7",
     "webpack-merge": "^4.1.2"
   },
@@ -100,6 +100,7 @@
     "@babel/plugin-syntax-dynamic-import": "7.0.0-beta.54",
     "@babel/preset-env": "7.0.0-beta.54",
     "@babel/preset-react": "7.0.0-beta.54",
+    "@babel/traverse": "^7.0.0-beta.56",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^8.2.2",
     "babel-jest": "^22.4.3",
@@ -162,7 +163,7 @@
     "start:sections": "node bin/styleguidist.js server --config examples/sections/styleguide.config.js",
     "lint": "eslint . --cache --fix",
     "precompile": "rimraf lib/",
-    "compile": "babel --ignore '*.spec.js' -d lib/ src/ --plugins=transform-class-properties,transform-object-rest-spread --presets=env,react",
+    "compile": "babel --ignore '*.spec.js' -d lib/ src/ --plugins=transform-class-properties,transform-object-rest-spread --presets=@babel/env,@babel/react",
     "compile:watch": "babel --ignore '*.spec.js' --watch -d lib/ src/ --plugins=transform-class-properties,transform-object-rest-spread --presets=env,react",
     "prepublishOnly": "npm run compile",
     "build:basic": "node bin/styleguidist.js build --config examples/basic/styleguide.config.js",
